reglage et correction le text overflox ellpsis avait disparu, line height ajouter et padding sur le prix pour bien aligner

--- a/scssetcss/style.scss
+++ b/scssetcss/style.scss
@@ -445,7 +445,9 @@ a {
       @include displayflex;
       justify-content: space-between;
       width: 1000px;
-      padding: 7px;
+      padding: 5px;
+      padding-top: 0;
+      padding-bottom: 0;
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
@@ -465,10 +467,9 @@ a {
     text-overflow: ellipsis;
     white-space: nowrap;
     flex-shrink: 0;
-    height: 55px;
-    @include displayflex;
-    flex-direction: column;
-    justify-content: center;
+    line-height: 20px;
+   
+    
 
   }
   .bloc-checked {
@@ -478,7 +479,6 @@ a {
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     overflow: hidden;
-    transition: 500ms;
     width: 60px;
     transition: 500ms;
     transform: translatex(60px);
@@ -514,7 +514,7 @@ a {
     display: none;
   }
   .bloc-checked__rotate {
-    transition: 700ms;
+    transition: 500ms;
     transform: rotate(-180deg);
     
   }
@@ -538,7 +538,7 @@ a {
     display: flex;
     align-items: flex-end;
     margin-left: 4px;
-    padding-top: 15px;
+    padding-top: 19px;
   }
   .order-btn {
     @include purple-btn;
